--- a/Practica_Google_Bilal/Styles.css
+++ b/Practica_Google_Bilal/Styles.css
@@ -1,3 +1,53 @@
-.G{
-position: relative;
+.Posicio {
+    margin-top: 10px;
+    margin-left: 80%;
+}
+
+.Gmail {
+    margin-left:5px;
+    color:black;
+}
+
+.Imatges {
+    margin-left: 20px;
+    margin-right:20px;
+    color:black;
+}
+
+.Boton {
+    margin-left:10px;
+    width: 110px;
+    height: 30px;
+    border-color:#136FF3;
+    border: none;
+    border-radius: 4px;
+}
+
+.Google {
+    margin-top:85px;    
+    margin-left: 600px;
+    width: 300px;
+    height: 100px;
+}
+
+.Botones {
+    margin-top: 90px;
+    margin-left:600px;
+
+}
+
+.Boton1 {
+    margin-right:20px;
+}
+
+.Textito {
+    margin-top: 20px;
+    margin-left:600px;
+}
+
+.Barra-busqueda{
+    margin-left: 600px;
+    border-radius: 4px;
+    margin-top: -120px;
+    width:300px;
 }
